homepage fixes text align etc

--- a/src/components/box/_box.scss
+++ b/src/components/box/_box.scss
@@ -14,7 +14,7 @@
   }
 
   p {
-    font-size: 14px;
+    font-size: 13px;
   }
 
   .box-side {
