--- a/src/components/slider/_slider.scss
+++ b/src/components/slider/_slider.scss
@@ -191,7 +191,7 @@
           padding-left: 55px;
 
           @media(max-width: 767px) {
-            font-size: 12px;
+            font-size: 13px;
           }
 
           .select-arrow {
